[package]
name = "arrow-adbc"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "31.0.0", path = "../arrow", features = ["ffi"], default_features = false}


[[example]]
name = "datafusion_adbc"
path = "./examples/datafusion_adbc.rs"
crate-type = ["dylib"]