# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow-avro"
version = { workspace = true }
description = "Support for parsing Avro format into the Arrow format"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "arrow_avro"
bench = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["deflate", "snappy", "zstd", "bzip2", "xz"]
deflate = ["flate2"]
snappy = ["snap", "crc"]
canonical_extension_types = ["arrow-schema/canonical_extension_types"]
md5 = ["dep:md5"]
sha256 = ["dep:sha2"]
small_decimals = []
avro_custom_types = ["dep:arrow-select"]

[dependencies]
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
arrow-array = { workspace = true }
arrow-select = { workspace = true, optional = true }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0.188", features = ["derive"] }
flate2 = { version = "1.0", default-features = false, features = [
    "rust_backend",
], optional = true }
snap = { version = "1.0", default-features = false, optional = true }
zstd = { version = "0.13", default-features = false, optional = true }
bzip2 = { version = "0.6.0", optional = true }
xz = { package = "liblzma", version = "0.4", default-features = false, optional = true }
crc = { version = "3.0", optional = true }
strum_macros = "0.27"
uuid = "1.17"
indexmap = "2.10"
rand = "0.9"
md5 = { version = "0.8", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
arrow-data = { workspace = true }
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
    "thread_rng",
] }
criterion = { workspace = true, default-features = false }
tempfile = "3.3"
arrow = { workspace = true }
futures = "0.3.31"
bytes = "1.10.1"
async-stream = "0.3.6"
apache-avro = "0.21.0"
num-bigint = "0.4"
once_cell = "1.21.3"

[[bench]]
name = "avro_reader"
harness = false

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "avro_writer"
harness = false
