# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow-cast"
version = { workspace = true }
description = "Cast kernel and utilities for Apache Arrow"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "arrow_cast"
path = "src/lib.rs"
bench = false

[package.metadata.docs.rs]
features = ["prettyprint"]

[features]
prettyprint = ["comfy-table"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
half = { version = "2.1", default-features = false }
num = { version = "0.4", default-features = false, features = ["std"] }
lexical-core = { version = "^0.8", default-features = false, features = ["write-integers", "write-floats", "parse-integers", "parse-floats"] }
comfy-table = { version = "6.0", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
half = { version = "2.1", default-features = false }

[build-dependencies]

[[bench]]
name = "parse_timestamp"
harness = false

[[bench]]
name = "parse_time"
harness = false

[[bench]]
name = "parse_decimal"
harness = false
