# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow-cast"
version = { workspace = true }
description = "Cast kernel and utilities for Apache Arrow"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "arrow_cast"
bench = false

[package.metadata.docs.rs]
all-features = true

[features]
prettyprint = ["comfy-table"]
force_validate = []

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-ord = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
chrono = { workspace = true }
half = { version = "2.1", default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = ["std"] }
lexical-core = { version = "1.0", default-features = false, features = ["write-integers", "write-floats", "parse-integers", "parse-floats"] }
atoi = "2.0.0"
comfy-table = { version = "7", optional = true, default-features = false }
base64 = "0.22"
zmij = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, default-features = false }
half = { version = "2.1", default-features = false }
rand = "0.9"

[[bench]]
name = "parse_timestamp"
harness = false

[[bench]]
name = "parse_time"
harness = false

[[bench]]
name = "parse_date"
harness = false

[[bench]]
name = "parse_decimal"
harness = false

